--- a/Wollump/web/views/_Layout.cshtml
+++ b/Wollump/web/views/_Layout.cshtml
@@ -10,6 +10,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
+        <link type="text/css" href="/css/pure-min.css">
+
         @RenderSection("styles", false)
     </head>
     <body>
