--- a/Wollump/web/views/edit.cshtml
+++ b/Wollump/web/views/edit.cshtml
@@ -17,7 +17,7 @@
 
 @section content {
     <div class="pure-g-r">
-        <div class="pure-u-1-1">
+        <div class="pure-u-1">
             <form class="pure-form pure-form-stacked" method="post" action="/edit/@Model.Name">
                 <fieldset>
                     <legend>Edit @Model.Name</legend>
